--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="logo-wrapper navbar-brand valign">
                 <div class="logo">
                     <a href="index.html">
-                        <h2>Michelle &amp; Ignacio</h2>
+                        <h2>Ignacio &amp; Michelle</h2>
                     </a>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                         <button id="play-pause">Reproducir</button>
                         <input type="range" id="progress" value="0" max="100">
                     </div>
-                    <audio id="track" src="music.mp3" autoplay></audio>
+                    <audio id="track" src="music.mp3" ></audio>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
-                    <h6 class="section-subtitle">Michelle & Ignacio</h6>
+                    <h6 class="section-subtitle">Ignacio & Michelle</h6>
                     <h2 class="section-title">Un amor para la historia</h2>
                 </div>
             </div>
@@ -442,24 +442,7 @@
         </div>
     </div>
 
-    <div id="gift" class="gift-registry" data-scroll-index="8" style="background-color: #faf8f7;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-
-                    <h6 class="section-subtitle" style="font-size: larger;">Sobre los niños</h6>
-                    <p>Queridos familiares y amigos: Para que todos puedan disfrutar plenamente de este día tan
-                        especial, la celebración está pensada solo para adultos.
-                        Agradecemos su comprensión y esperamos compartir con ustedes una velada memorable
-                    </p>
-                    Con cariño, <br>
-                    Michelle y Ignacio
-                    </p>
-                    <p></p>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <br><br>
 
     <!-- Footer section -->
@@ -469,7 +452,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="section-padding">
-                            <h2><span>Michelle <small>&amp;</small> Ignacio</span></h2>
+                            <h2><span>Ignacio <small>&amp;</small> Michelle</span></h2>
                             <h6>19 de Julio, Turrialba</h6>
                             <br>
                             <br>
